--- a/index.html
+++ b/index.html
@@ -84,9 +84,11 @@
     <!-- Hero -->
     <section class="section hero" id="hero">
       <h1>Collaboration for Autonomous Science Instruments</h1>
-      <p>A workshop convening researchers, science instrument vendors, and autonomous science startups to collaborate on better software and interoperability to accelerate autonomous lab development.
-      <br>
-      Hosted by <a href="https://www.renaissancephilanthropy.org/" target="_blank>Renaissance Philanthropy</a>.</p>
+      <p>
+        A workshop convening researchers, science instrument vendors, and autonomous science startups to collaborate on better software and interoperability that accelerate autonomous laboratory development.
+        <br />
+        Hosted by <a href="https://www.renaissancephilanthropy.org/" target="_blank">Renaissance Philanthropy</a>.
+      </p>
     </section>
 
     <!-- Info -->
@@ -129,19 +131,19 @@
               <tr><th scope="col">Time</th><th scope="col">Event</th><th scope="col">Details</th></tr>
             </thead>
             <tbody>
-              <tr><td>8:00–9:00am</td><td>Breakfast</td><td>buffet and networking</td></tr>
-              <tr><td>9:00–9:45am</td><td>Welcome &amp; Keynote</td><td>Charles Yang, Welcome<br>Theresa Mayer, Keynote<br>Icebreaker discussion</td></tr>
-              <tr><td>9:45–10:45am</td><td>Research Partnership Lightning Talks I</td><td>David Fenning (UCSD) and Caitlin Hogan (Labric) <br>Jehad Ahmed (Meta) and Aaike van Vugt (Vsparticle) </td></tr>
-              <tr><td>10:45–11:15am</td><td>Break</td><td>Coffee and hallway conversations</td></tr>
-              <tr><td>11:15–12:00pm</td><td>Research Partnership Lightning Talks II</td><td>Boris Slautin (UT Knoxville) and Roger Proksch (Oxford Instruments)<br>Wei Zhu (Virginia Tech) and consortium members<br>Utkarsh Pratiush (UT Knoxville) and Paolo Longo (Thermo Fisher)</td></tr>
-              <tr><td>12:00–1:00pm</td><td>Lunch</td><td>Lunch</td></tr>
-              <tr><td>1:00–2:00pm</td><td>Breakout Discussion</td><td>Breakout discussions and report-outs on challenges & opportunities for autonomous science instrumentation</td></tr>
-              <tr><td>2:00–2:30pm</td><td>Break</td><td>Coffee and hallway conversations</td></tr>
-              <tr><td>2:30–3:30pm</td><td>Facilitating Research Partnerships Breakouts</td><td>Round 1 of research partnerships breakout</td></tr>
-              <tr><td>2:30–3:30pm</td><td>Autonomous Science Roundtable</td><td>Roundtable discussion with philanthropists, investors, and AI labs on advancing autonomous labs</td></tr>
-              <tr><td>3:30–4:00pm</td><td>Break</td><td>Refreshments</td></tr>
-              <tr><td>4:00–4:30pm</td><td>Closing Session</td><td>Charles Yang, survey results and next steps</td></tr>
-              <tr><td>4:30–6:00pm</td><td>Reception</td><td>Networking reception</td></tr>
+              <tr><td>8:00–9:00am</td><td>Breakfast</td><td>Buffet and networking.</td></tr>
+              <tr><td>9:00–9:45am</td><td>Welcome &amp; Keynote</td><td>Charles Yang, welcome remarks.<br />Theresa Mayer, keynote address.<br />Icebreaker discussion.</td></tr>
+              <tr><td>9:45–10:45am</td><td>Research Partnership Lightning Talks I</td><td>David Fenning (University of California, San Diego) and Caitlin Hogan (Labric).<br />Jehad Ahmed (Meta) and Aaike van Vugt (VSParticle).</td></tr>
+              <tr><td>10:45–11:15am</td><td>Break</td><td>Coffee and hallway conversations.</td></tr>
+              <tr><td>11:15–12:00pm</td><td>Research Partnership Lightning Talks II</td><td>Boris Slautin (University of Tennessee, Knoxville) and Roger Proksch (Oxford Instruments).<br />Wei Zhu (Virginia Tech) and consortium members.<br />Utkarsh Pratiush (University of Tennessee, Knoxville) and Paolo Longo (Thermo Fisher).</td></tr>
+              <tr><td>12:00–1:00pm</td><td>Lunch</td><td>Catered lunch.</td></tr>
+              <tr><td>1:00–2:00pm</td><td>Breakout Discussion</td><td>Breakout discussions and report-outs on challenges and opportunities for autonomous science instrumentation.</td></tr>
+              <tr><td>2:00–2:30pm</td><td>Break</td><td>Coffee and hallway conversations.</td></tr>
+              <tr><td>2:30–3:30pm</td><td>Facilitating Research Partnerships Breakouts</td><td>Round 1 of research partnership breakouts.</td></tr>
+              <tr><td>2:30–3:30pm</td><td>Autonomous Science Roundtable</td><td>Concurrent roundtable with philanthropists, investors, and AI labs on advancing autonomous laboratories.</td></tr>
+              <tr><td>3:30–4:00pm</td><td>Break</td><td>Refreshments.</td></tr>
+              <tr><td>4:00–4:30pm</td><td>Closing Session</td><td>Charles Yang, survey results and next steps.</td></tr>
+              <tr><td>4:30–6:00pm</td><td>Reception</td><td>Networking reception.</td></tr>
             </tbody>
           </table>
         </div>
@@ -159,12 +161,12 @@
               <tr><th scope="col">Time</th><th scope="col">Event</th><th scope="col">Details</th></tr>
             </thead>
             <tbody>
-              <tr><td>8:00–9:00am</td><td>Breakfast</td><td>Continental buffet and networking</td></tr>
-              <tr><td>9:00–9:30am</td><td>Welcome &amp; Keynote</td><td>Charles Yang, Welcome and reminders<br>Venkat Viswanathan, U Mich</td></tr>
-              <tr><td>9:30–10:30am</td><td>Facilitating Research Partnerships Breakouts</td><td>Round 2 of research partnerships breakout</td></tr>
-              <tr><td>10:00–10:30am</td><td>Break</td><td>Coffee and hallway conversations</td></tr>
-              <tr><td>11:00–12:00pm</td><td>Closing Session</td><td>Submit research partnerships<br>Follow-ups and closing remarks</td></tr>
-              <tr><td>12:00–1:00pm</td><td>Lunch</td><td>Farewell lunch</td></tr>
+              <tr><td>8:00–9:00am</td><td>Breakfast</td><td>Continental buffet and networking.</td></tr>
+              <tr><td>9:00–9:30am</td><td>Welcome &amp; Keynote</td><td>Charles Yang, welcome and reminders.<br />Venkat Viswanathan (University of Michigan), keynote address.</td></tr>
+              <tr><td>9:30–10:30am</td><td>Facilitating Research Partnerships Breakouts</td><td>Round 2 of research partnership breakouts.</td></tr>
+              <tr><td>10:30–11:00am</td><td>Break</td><td>Coffee and hallway conversations.</td></tr>
+              <tr><td>11:00–12:00pm</td><td>Closing Session</td><td>Submit research partnerships.<br />Follow-ups and closing remarks.</td></tr>
+              <tr><td>12:00–1:00pm</td><td>Lunch</td><td>Farewell lunch.</td></tr>
             </tbody>
           </table>
         </div>
@@ -174,55 +176,53 @@
     <section class="section" id="participants">
       <h2>Confirmed Participants</h2>
       <div class="people">
-        <div class="person"><div class="name">Aaike van Vugt</div><div class="affil">Vsparticle</div></div>
-        <div class="person"><div class="name">Aaron Gilad Kusne</div><div class="affil">NIST</div></div>
+        <div class="person"><div class="name">Aaike van Vugt</div><div class="affil">VSParticle</div></div>
+        <div class="person"><div class="name">Aaron Gilad Kusne</div><div class="affil">National Institute of Standards and Technology (NIST)</div></div>
         <div class="person"><div class="name">Aditya Rajagopal</div><div class="affil">Esperto Medical</div></div>
-        <div class="person"><div class="name">Aleks Siemenn</div><div class="affil">MIT</div></div>
+        <div class="person"><div class="name">Aleks Siemenn</div><div class="affil">Massachusetts Institute of Technology</div></div>
         <div class="person"><div class="name">Austin Carson</div><div class="affil">SeedAI</div></div>
         <div class="person"><div class="name">Azeem Ur Rehman</div><div class="affil">Sciprios GmbH</div></div>
-        <div class="person"><div class="name">Benji Maruyama</div><div class="affil">Air Force Research Laboratory</div></div>
-        <div class="person"><div class="name">Benji Maruyama</div><div class="affil">AFRL</div></div>
+        <div class="person"><div class="name">Benji Maruyama</div><div class="affil">Air Force Research Laboratory (AFRL)</div></div>
         <div class="person"><div class="name">Boris Slautin</div><div class="affil">University of Tennessee</div></div>
-        <div class="person"><div class="name">Bryan Cheong</div><div class="affil">Salesforce Inc</div></div>
+        <div class="person"><div class="name">Bryan Cheong</div><div class="affil">Salesforce</div></div>
         <div class="person"><div class="name">Caitlin Hogan</div><div class="affil">Labric</div></div>
         <div class="person"><div class="name">Chad Wilson</div><div class="affil">Mirror Physics</div></div>
         <div class="person"><div class="name">Connor Hogan</div><div class="affil">Labric</div></div>
         <div class="person"><div class="name">Cristian Ponce</div><div class="affil">Tetsuwan Scientific</div></div>
-        <div class="person"><div class="name">Daniel Abdoue</div><div class="affil">UC San Diego</div></div>
-        <div class="person"><div class="name">Daniil Boiko</div><div class="affil">Onepot AI, Inc.</div></div>
-        <div class="person"><div class="name">David Fenning</div><div class="affil">UC San Diego</div></div>
+        <div class="person"><div class="name">Daniel Abdoue</div><div class="affil">University of California, San Diego</div></div>
+        <div class="person"><div class="name">Daniil Boiko</div><div class="affil">OnePot AI Inc.</div></div>
+        <div class="person"><div class="name">David Fenning</div><div class="affil">University of California, San Diego</div></div>
         <div class="person"><div class="name">Devora Najjar</div><div class="affil">Alfred P. Sloan Foundation</div></div>
         <div class="person"><div class="name">Doga Ozgulbas</div><div class="affil">Argonne National Laboratory</div></div>
         <div class="person"><div class="name">Eric Goergen</div><div class="affil">Thermo Fisher Scientific</div></div>
-        <div class="person"><div class="name">Fernando Pérez</div><div class="affil">UC Berkeley</div></div>
+        <div class="person"><div class="name">Fernando Pérez</div><div class="affil">University of California, Berkeley</div></div>
         <div class="person"><div class="name">Giovanni Mariotta</div><div class="affil">Thermo Fisher Scientific</div></div>
         <div class="person"><div class="name">Heather Job</div><div class="affil">Pacific Northwest National Laboratory</div></div>
         <div class="person"><div class="name">Hemanth Neelgund Ramesh</div><div class="affil">University of Washington</div></div>
         <div class="person"><div class="name">Hiromu Rose</div><div class="affil">Episteme</div></div>
         <div class="person"><div class="name">Hongquan Li</div><div class="affil">Cephla</div></div>
-        <div class="person"><div class="name">Howie Joress</div><div class="affil">NIST</div></div>
+        <div class="person"><div class="name">Howie Joress</div><div class="affil">National Institute of Standards and Technology (NIST)</div></div>
         <div class="person"><div class="name">Ian Meyer</div><div class="affil">Satomic.ai</div></div>
         <div class="person"><div class="name">Jack Wells</div><div class="affil">NVIDIA</div></div>
-        <div class="person"><div class="name">Jehad Abed</div><div class="affil">Materials Data Factory</div></div>
+        <div class="person"><div class="name">Jehad Ahmed</div><div class="affil">Materials Data Factory</div></div>
         <div class="person"><div class="name">Josh Greenberg</div><div class="affil">Alfred P. Sloan Foundation</div></div>
-        <div class="person"><div class="name">Justin Gallivan</div><div class="affil">W.M. Keck Foundation</div></div>
+        <div class="person"><div class="name">Justin Gallivan</div><div class="affil">W. M. Keck Foundation</div></div>
         <div class="person"><div class="name">Kinston Ackölf</div><div class="affil">University of Utah</div></div>
         <div class="person"><div class="name">Maher Alghalayini</div><div class="affil">Lawrence Berkeley National Laboratory</div></div>
-        <div class="person"><div class="name">Nicole Nelson</div><div class="affil">University of Wisconsin Madison</div></div>
+        <div class="person"><div class="name">Nicole Nelson</div><div class="affil">University of Wisconsin–Madison</div></div>
         <div class="person"><div class="name">Nicolai Dorka</div><div class="affil">Stanford University</div></div>
         <div class="person"><div class="name">Nina Lu</div><div class="affil">OnlyCures</div></div>
         <div class="person"><div class="name">Paolo Longo</div><div class="affil">Thermo Fisher Scientific</div></div>
         <div class="person"><div class="name">Robert Moore</div><div class="affil">Oak Ridge National Laboratory</div></div>
         <div class="person"><div class="name">Sean Finamore</div><div class="affil">Medra</div></div>
-        <div class="person"><div class="name">Semion Saikin</div><div class="affil">Kebotix, Inc.</div></div>
+        <div class="person"><div class="name">Semion Saikin</div><div class="affil">Kebotix Inc.</div></div>
         <div class="person"><div class="name">Sergio Pablo Garcia Carrillo</div><div class="affil">Acceleration Consortium</div></div>
-        <div class="person"><div class="name">Sheryl Sanchez</div><div class="affil">University of Tennessee-Knoxville</div></div>
-        <div class="person"><div class="name">Shrika Eddula</div><div class="affil">MIT</div></div>
-        <div class="person"><div class="name">Steven Spurgeon</div><div class="affil">National Renewable Energy Laboratory / Colorado School of Mines</div></div>
-        <div class="person"><div class="name">Theresa Mayer</div><div class="affil">Carnegie Mellon University</div></div>
+        <div class="person"><div class="name">Sheryl Sanchez</div><div class="affil">University of Tennessee, Knoxville</div></div>
+        <div class="person"><div class="name">Shrika Eddula</div><div class="affil">Massachusetts Institute of Technology</div></div>
+        <div class="person"><div class="name">Steven Spurgeon</div><div class="affil">National Renewable Energy Laboratory and Colorado School of Mines</div></div>
         <div class="person"><div class="name">Theresa Mayer</div><div class="affil">Carnegie Mellon University</div></div>
         <div class="person"><div class="name">Thomas Milton</div><div class="affil">Amodo Design</div></div>
-        <div class="person"><div class="name">Utkarsh Pratiush</div><div class="affil">UT Knoxville</div></div>
+        <div class="person"><div class="name">Utkarsh Pratiush</div><div class="affil">University of Tennessee, Knoxville</div></div>
         <div class="person"><div class="name">Venkat Viswanathan</div><div class="affil">University of Michigan</div></div>
         <div class="person"><div class="name">Wei Zhou</div><div class="affil">Virginia Tech</div></div>
         <div class="person"><div class="name">Yan Zeng</div><div class="affil">Florida State University</div></div>
@@ -235,15 +235,16 @@
     <section class="section" id="committee">
       <h2>Organizing Committee</h2>
       <div class="people">
-        <div class="person"><img src="assets/david_fenning.jpg" alt="David Fenning"/><div class="name">David Fenning</div><div class="affil">UC San Diego</div></div>
-        <div class="person"><img src="assets/jie_xu.jpg" alt="Jie Xu"/><div class="name">Jie Xu</div><div class="affil">Argonne National Lab</div></div>
-        <div class="person"><img src="assets/milad_abolhasani.jpg" alt="Milad Abolhasani"/><div class="name">Milad Abolhasani</div><div class="affil">NC State University</div></div>
-        <div class="person"><img src="assets/shijing_sun.jpg" alt="Shijing Sun"/><div class="name">Shijing Sun</div><div class="affil">University of Cambridge</div></div>      </div>
+        <div class="person"><img src="assets/david_fenning.jpg" alt="David Fenning"/><div class="name">David Fenning</div><div class="affil">University of California, San Diego</div></div>
+        <div class="person"><img src="assets/jie_xu.jpg" alt="Jie Xu"/><div class="name">Jie Xu</div><div class="affil">Argonne National Laboratory</div></div>
+        <div class="person"><img src="assets/milad_abolhasani.jpg" alt="Milad Abolhasani"/><div class="name">Milad Abolhasani</div><div class="affil">North Carolina State University</div></div>
+        <div class="person"><img src="assets/shijing_sun.jpg" alt="Shijing Sun"/><div class="name">Shijing Sun</div><div class="affil">University of Cambridge</div></div>
+      </div>
     </section>
 
     <footer>
-      <p>2025 Collaborations for Autonomous Science Instruments</p>
-      <p>With gracious support from <a href="https://sloan.org/" target="_blank">Sloan Foundation</a> and <a href="https://www.navigation.org/" target="_blank">the Navigation Fund</a></p>
+      <p>2025 Collaboration for Autonomous Science Instruments</p>
+      <p>With gracious support from the <a href="https://sloan.org/" target="_blank">Sloan Foundation</a> and <a href="https://www.navigation.org/" target="_blank">Navigation Fund</a>.</p>
     </footer>
   </div>
 </body>
